# Voice-commands-recognition

./: README.md  pyproject.toml
configs/: model_params copy 2.yaml  model_params.yaml  model_params_res.yaml
data/: data_base_audio.pickle
data/user_102864961/: audio_commands.yaml  username
data/user_1045054896/: audio_commands.yaml  cond  username
data/user_1057754349/: username
data/user_1063912796/: username
data/user_1078682129/: username
data/user_1080897241/: audio_commands.yaml  cond  username
data/user_113088093/: audio_commands.yaml  cond  username
data/user_1154574269/: username
data/user_1167582716/: audio_commands.yaml  cond  username
data/user_1214335647/: username
data/user_1226209785/: username
data/user_1338255374/: username
data/user_158470103/: audio_commands.yaml  cond  username
data/user_1761086604/: username
data/user_1886553562/: username
data/user_1921685993/: audio_commands.yaml  cond  username
data/user_192546140/: username
data/user_1953291565/: audio_commands.yaml  cond  username
data/user_215395188/: audio_commands.yaml  cond  username
data/user_241347699/: username
data/user_257689856/: username
data/user_299004426/: audio_commands.yaml  cond  username
data/user_312816217/: audio_commands.yaml  cond  username
models/: attention.py  classifier.py  cnn.py  encoder.py  model.py
notebooks/: NN_rec copy.ipynb  NN_rec_for_Kaggle.ipynb  NN_rec_sweep.ipynb  deepspeech-2.ipynb  record_analyst.ipynb  voice-commands-rec-sweep.ipynb
tests/: test_cnn_rnn.ipynb  test_transfer_learning.ipynb
(+87 files in other folders)
