[tool.poetry]
name = "nn-commands-recognition"
version = "0.1.0"
description = ""
authors = ["Ivan"]
license = "MIT"
readme = "README.md"
packages = [{include = "nn_commands_recognition"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
torchaudio = "^2.0.1"
numpy = "^1.24.2"
tqdm = "^4.65.0"
ipython = "^8.12.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
torchtext = "^0.15.1"
audio-augmentations = "^0.1.3"
augment = "^0.4"
wandb = "^0.14.2"
pytorch-lightning = "^2.0.1.post0"
omegaconf = "^2.3.0"
soundfile = "^0.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
